force-app/main/default/objects/Market__c/Market__c.object-meta.xml
<CustomObject>
    <description>Created By: CC
Department: BW
Purpose: Contains information on markets including description and postal codes.</description>
    <label>Market</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>