force-app/main/default/objects/Market__c/fields/PostalCodes__c.field-meta.xml
<CustomField>
    <fullName>PostalCodes__c</fullName>
    <description>Created By: CC 
Department: 
BW Purpose: List of postal codes associated with a market.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>