force-app/main/default/objects/Market__c/fields/Public_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Public_Knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: CC
Purpose: Signify if a Market is public knowledge or not.</description>
    <inlineHelpText>Can the public know this Bitwise market exists?</inlineHelpText>
    <label>Public Knowledge</label>
    <type>Checkbox</type>
</CustomField>