force-app/main/default/objects/Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Public_Knowledge__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>